--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gallery-viewer"]
 	path = gallery-viewer
-	url = https://github.com/belo32/gallery-viewer
+	url = git://github.com/belo32/gallery-viewer.git
